# swift-generator

./: LICENSE  README.md  pyproject.toml  test_separate_files.py
.cursor/rules/: mypy-avoid-importing.mdc
examples/openapi_3/: example_openapi.yaml
src/: __init__.py  openapi_to_swift.py  pydantic_to_swift.py  utils.py
src/jsonschema/: JSONSchema.py
src/openapi/: OpenAPISchemaObject.py  OpenAPISpec.py  OpenAPISwiftModelGenerator.py  parse_openapi_to_swift.py
src/openapi/__examples/: progress.json
src/openapi/enums/: HttpMethod.py  HttpStatusCode.py
src/openapi/examples/: example_openapi_v3.json
src/openapi/schemas/: Contact.py  Example.py  ExternalDocumentation.py  Header.py  Info.py  License.py  Link.py  MediaType.py  Parameter.py  Reference.py  Response.py  Schema.py  SecurityRequirement.py  SecurityScheme.py  Server.py  Spec.py  Tag.py
tests/: test_enum_generation.py  test_openapi_response_or_ref.py  test_openapi_schema_object.py  test_openapi_to_swift.py  test_pydantic_to_swift.py  test_response_generation.py  test_schema_grouping.py
